fix position mobile-arrow

--- a/style.css
+++ b/style.css
@@ -531,7 +531,7 @@ html {
 .mobile-arrow {
     position: fixed;
     bottom: 20px;
-    left: 20%;
+    left: 50%;
     transform: translateX(-50%);
     padding: 12px 20px;
     background: linear-gradient(145deg, #FF6347, #FF4500);
